--- a/src/app/admin/admin-companies/admin-companies.component.html
+++ b/src/app/admin/admin-companies/admin-companies.component.html
@@ -19,13 +19,12 @@
         <tr>
             <th>Picture</th>
             <th>Name</th>
-            <th>Phone</th>
+            <th>Телефон</th>
             <th>Email</th>
             <th>Site</th>
             <th>Delete</th>
         </tr>
         <tr *ngFor="let company of companies">
-            <td><img src="https://upload.wikimedia.org/wikipedia/commons/d/da/SoftServe_logo_new.png" alt="" /></td>
             <td>{{company.name}}</td>
             <td>{{company.phone}}</td>
             <td>{{company.email}}</td>
