--- a/src/app/admin/admin-header/admin-header.component.html
+++ b/src/app/admin/admin-header/admin-header.component.html
@@ -5,7 +5,7 @@
         </div>
 
         <div id="right-side-menu">
-            <a (click)="signOut()">Sign Out</a>
+            <a (click)="signOut()">Вийти</a>
         </div>
     </div>
 </div>
