--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,11 +1,11 @@
 <app-admin-header></app-admin-header>
 <div class="container">
     <div class="left-side-menu">
-        <a routerLink="/admin/admin-employees" routerLinkActive="active"><i class="fa fa-users"></i>Employees</a>
-        <a routerLink="/admin/admin-companies" routerLinkActive="active"><i class="fa fa-university"></i>Companies</a>
-        <a routerLink="/admin/admin-recruiters" routerLinkActive="active"><i class="fa fa-user-secret"></i>Recruiters</a>
-        <a routerLink="/admin/admin-vacancies" routerLinkActive="active"><i class="fa fa-address-card"></i>Vacancies</a>
-        <a routerLink="/admin/admin-chat" routerLinkActive="active"><i class="fa fa-comments"></i>Chat</a>
+        <a routerLink="/admin/admin-employees" routerLinkActive="active"><i class="fa fa-users"></i>Співшукачі</a>
+        <a routerLink="/admin/admin-companies" routerLinkActive="active"><i class="fa fa-university"></i>Компанії</a>
+        <a routerLink="/admin/admin-recruiters" routerLinkActive="active"><i class="fa fa-user-secret"></i>Рекрутери</a>
+        <a routerLink="/admin/admin-vacancies" routerLinkActive="active"><i class="fa fa-address-card"></i>Вакансії</a>
+        <a routerLink="/admin/admin-chat" routerLinkActive="active"><i class="fa fa-comments"></i>Чат</a>
     </div>
 
     <div class="content">
