--- a/src/app/reset-password/reset-password.component.html
+++ b/src/app/reset-password/reset-password.component.html
@@ -12,31 +12,31 @@
                     (resetPasswordForm.get('currentPassword').dirty || resetPasswordForm.get('currentPassword').touched)"
           class="alert alert-danger">
           <div *ngIf="resetPasswordForm.controls['currentPassword'].errors.required">
-            Current Password is required!
+            Current Пароль is required!
           </div>
          
         </div>
       </div>
       <hr>
 
-      <h4 class="info-title">New Password<span class="required-input-symbol">*</span></h4>
+      <h4 class="info-title">Новий пароль<span class="required-input-symbol">*</span></h4>
       <div class="ui-float-label">
         <input type="password" pPassword formControlName="newPassword" />
         <div *ngIf="resetPasswordForm.get('newPassword').invalid &&
                     (resetPasswordForm.get('newPassword').dirty || resetPasswordForm.get('newPassword').touched)"
           class="alert alert-danger">
           <div *ngIf="resetPasswordForm.controls['newPassword'].errors.required">
-            New Password is required
+            New Пароль is required
           </div>
           <div *ngIf="resetPasswordForm.controls['newPassword'].errors.minlength ||
           resetPasswordForm.controls['newPassword'].errors.maxlength">
-            Password should contain (8-100) chars
+            Пароль should contain (8-100) chars
           </div>
         </div>
       </div>
       <hr>
 
-      <h4 class="info-title">Confirm Password<span class="required-input-symbol">*</span></h4>
+      <h4 class="info-title">Підтвердити пароль<span class="required-input-symbol">*</span></h4>
       <div class="ui-float-label">
         <input type="password" pPassword formControlName="confirmPassword" />
         <div *ngIf="resetPasswordForm.get('confirmPassword').invalid &&
@@ -58,7 +58,7 @@
   <p-footer>
     <button type="button" pButton icon="pi pi-check" (click)="resetPassword(role,id)" label="Reset"
       [disabled]="resetPasswordForm.invalid || (resetPasswordForm.get('confirmPassword').value!=resetPasswordForm.get('newPassword').value)" class="ui-button-success"></button>
-    <button type="button" pButton icon="pi pi-times" (click)="closeForm()" label="Cancel" class="ui-button-secondary"></button>
+    <button type="button" pButton icon="pi pi-times" (click)="closeForm()" label="Відмінити" class="ui-button-secondary"></button>
   </p-footer>
 
 
