--- a/src/app/vacancies-list/vacancies-list.component.html
+++ b/src/app/vacancies-list/vacancies-list.component.html
@@ -21,7 +21,7 @@
           <button pButton type="button" (click)="confirmDialog(vacancy)" label="Attach" class="ui-button-success"></button> 
         </div>
         <div class="logo">
-          <img src="https://logo-frankfurt.cf-rabota.com.ua/959_20180227113934.png" (click)="companyDetails(vacancy?.recruiter?.company?.id)">
+          <img src="" (click)="companyDetails(vacancy?.recruiter?.company?.id)">
         </div>
       </article>
       <div class="paginator">
