--- a/src/app/admin/admin-recruiters/admin-recruiters.component.html
+++ b/src/app/admin/admin-recruiters/admin-recruiters.component.html
@@ -18,10 +18,10 @@
     <table>
         <tr>
             <th>Picture</th>
-            <th>First Name</th>
-            <th>Last Name</th>
+            <th>Ім'я</th>
+            <th>Прізвище</th>
             <th>Email</th>
-            <th>Phone</th>
+            <th>Телефон</th>
             <th>Company</th>
             <th>Delete</th>
         </tr>
