--- a/src/app/job-search/job-search.component.html
+++ b/src/app/job-search/job-search.component.html
@@ -49,7 +49,7 @@
           </p>
         </div>
         <div class="logo">
-          <img src="https://logo-frankfurt.cf-rabota.com.ua/959_20180227113934.png" [routerLink]="['/company-details/', vacancy.recruiter.company.id]"
+          <img src="" [routerLink]="['/company-details/', vacancy.recruiter.company.id]"
             routerLinkActive="active">
         </div>
       </article>
