--- a/src/app/recruiter-form/recruiter-form.component.html
+++ b/src/app/recruiter-form/recruiter-form.component.html
@@ -4,25 +4,25 @@
     <form [formGroup]="recruiterForm" novalidate >    
       <div class="ui-float-label">
         <input id="firstName" type="text" pInputText formControlName="firstName" required> 
-				<label for="lastName">First Name<span class="required-input-symbol">*</span></label>
+				<label for="lastName">Ім'я<span class="required-input-symbol">*</span></label>
 				<div *ngIf="recruiterForm.get('firstName').invalid && (recruiterForm.get('firstName').dirty || recruiterForm.get('firstName').touched)" class="alert alert-danger">
 					<div *ngIf="recruiterForm.controls['firstName'].errors.required">
-						First Name is required
+						Ім'я is required
 					</div>
 					<div *ngIf="recruiterForm.controls['firstName'].errors.minlength || recruiterForm.controls['firstName'].errors.maxlength">
-            First Name should contain (1-50) chars
+            Ім'я should contain (1-50) chars
 					</div>
 		    </div>
 			</div>
       <div class="ui-float-label">
         <input id="lastName" type="text" pInputText formControlName="lastName"> 
-        <label for="lastName">Last Name<span class="required-input-symbol">*</span></label>
+        <label for="lastName">Прізвище<span class="required-input-symbol">*</span></label>
 				<div *ngIf="recruiterForm.get('lastName').invalid && (recruiterForm.get('lastName').dirty || recruiterForm.get('lastName').touched)" class="alert alert-danger">
             <div *ngIf="recruiterForm.controls['lastName'].errors.required">
-              Last Name is required
+              Прізвище is required
             </div>
             <div *ngIf="recruiterForm.controls['lastName'].errors.minlength || recruiterForm.controls['lastName'].errors.maxlength">
-              Last Name should contain (1-50) chars
+              Прізвище should contain (1-50) chars
             </div>
         </div>
       </div>
@@ -45,7 +45,7 @@
       </div>
       <div class="ui-float-label phone">
         <p-inputMask id="phone" mask="(999) 999-9999"  size="33" formControlName="phone"></p-inputMask>
-        <label for="phone">Phone</label>
+        <label for="phone">Телефон</label>
       </div>
 
       <div class="ui-float-label">
@@ -69,8 +69,8 @@
 
   <p-footer>
     <button pButton type="button" icon="pi pi-check" (click)="submit()" [disabled]="recruiterForm.invalid" label="Submit" class="ui-button-success"></button>
-    <button pButton type="button" icon="pi pi-times" (click)="display=false" label="Cancel" class="ui-button-secondary"></button>
+    <button pButton type="button" icon="pi pi-times" (click)="display=false" label="Відмінити" class="ui-button-secondary"></button>
   </p-footer>
 </p-dialog>
 
-<button type="button" (click)="showRecruiterForm('Create')" pButton icon="pi pi-fw pi-plus" label="Add Recruiter"></button>
+<button type="button" (click)="showRecruiterForm('Create')" pButton icon="pi pi-fw pi-plus" label="Добавити рекрутера"></button>
